[gd_scene load_steps=4 format=3 uid="uid://dwk0ymd85qokp"]

[ext_resource type="Script" uid="uid://bsqabyrsjmewd" path="res://Scripts/DataNodes/Cards/CardNode.gd" id="1_reqpr"]
[ext_resource type="PackedScene" uid="uid://dda8aufvip874" path="res://Scenes/CardVisual.tscn" id="2_23e6p"]
[ext_resource type="Texture2D" uid="uid://bh2punvxn384r" path="res://Art/card_slot.png" id="3_50h0p"]

[node name="CardNode" type="Node2D"]
script = ExtResource("1_reqpr")

[node name="CardVisual" parent="." instance=ExtResource("2_23e6p")]

[node name="Button" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -33.0
offset_right = 24.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="SlotSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_50h0p")

[connection signal="mouse_entered" from="Button" to="." method="onMouseEnter"]
[connection signal="mouse_exited" from="Button" to="." method="onMouseExit"]
